# camunda-client

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: lint.yml
camunda_client/: __init__.py  _logger.py  exceptions.py  types_.py  utils.py
camunda_client/clients/: __init__.py  dto.py  endpoints.py  schemas.py  types_.py
camunda_client/clients/engine/: __init__.py  client.py  dto.py
camunda_client/clients/engine/schemas/: __init__.py  body.py  enums.py  query.py  response.py
camunda_client/clients/external_task/: __init__.py  client.py  dto.py
camunda_client/clients/external_task/schemas/: __init__.py  body.py  response.py
camunda_client/worker/: __init__.py  context.py  dto.py  task_worker.py  topic_consumer.py
examples/: camunda_engine_client.py  external_task_entrypoint.py
examples/external_task/: core_worker.py  dto.py  enums.py  processor.py
tests/: conftest.py
tests/camunda_client/: test_deserialize.py  test_get_value.py
tests/camunda_client/engine/: test_typed_task_variable.py
